Center icons properly if size doesn't fit

When requesting an icon size that cannot be served, the pixmap is centered in the requested size.
By using the original pixmap's device pixel ratio we ensure the padded pixmap is painted correctly.

BUG: 396990

Differential Revision: https://phabricator.kde.org/D16291