src/kiconengine.cpp
@@ -104,8 +104,8 @@ QPixmap KIconEngine::createPixmap(const QSize &size, qreal scale, QIcon::Mode mo
         return pix;
     }
 
-    QPixmap pix2(size * scale);
-    pix2.setDevicePixelRatio(scale);
+    QPixmap pix2(size * pix.devicePixelRatio());
+    pix2.setDevicePixelRatio(pix.devicePixelRatio());
     pix2.fill(QColor(0, 0, 0, 0));
 
     QPainter painter(&pix2);
